# statist

./: .env  Cargo.toml  rare_items.json
src/: main.rs  stats.rs
src/stats/: rare.rs  stay.rs
