[package]
name = "statics"
version = "0.1.0"
authors = ["xl000 <l_xb@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3", default-features = false, features = [ "runtime-async-std", "macros", "mysql" ] }
futures = "0.3"
chrono = "0.4"
anyhow = "1.0"
serde_json = "1.0"
